# Skuld

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.frontend  README.md  VPN_SSH_SETUP.md  VPN_TEST_DEPLOYMENT.md  WIREGUARD_SETUP.md  agents.md  app.py  backtest.md  bug.md  config.py  config_utils.py  crontab  dividend_data.feather  dividenden_scanner_v2.md  docker-compose.llm.yml  docker-compose.local-db.yml  docker-compose.react.yml  docker-compose.staging.yml  docker-compose.testing.yml  docker-compose.yml  doku.md  flask_spreads.md  lösch mich  main.py  memory_check.sh  monte_carlo_refactoring.md  monte_carlo_simulation.md  monte_carlo_todo.md  requirements-docker.txt  requirements.txt  run_data_collection.sh  setup-skuld.py  symbols_exchange.xlsx  test_frontend_filters.py  test_oom_alert.sh  (+5 more)
.github/: copilot-instructions.md
.junie/: AGENTS.md
api/: main.py  requirements.txt
authelia/: configuration.yml
docs/: DEPLOYMENT.md  DOCKER_CHEAT_SHEET.md  DOCKER_DISK_CLEANUP.md  MIGRATION_NO_GOOGLE_DRIVE.md  MONITORING_AND_ALERTS.md  QUICKSTART.md  SECRETS_MANAGEMENT.md  VPN_TUNNEL_SETUP_GUIDE.md  agents.md  current-architecture.md  deployment-contract.md  deployment-operating-model.md  deployment-secrets-architecture.md  developer-setup.md  expected_move_implementation.md  generate_strategy_pdf.py  junie.md  target-architecture.md  user_guide_mc_debug.md
flask_pages/: analyst_prices.py  data_logs.py  married_puts.py  (+6 more)
ops/skuld-cli/: README.md  pyproject.toml
ops/skuld-cli/skuld_cli/: cli.py  config.py  github.py  servers.yaml
(+626 files in other folders)
